--- a/NETFLIX/css/aside.css
+++ b/NETFLIX/css/aside.css
@@ -4,12 +4,12 @@ video{
     object-fit: cover;
     position: absolute;
 }
-/* img{
+img{
     object-fit: cover;
     width: 100%;
     height: 100%;
     display: block;
-} */
+}
 ul{
     list-style: none;
     padding-left: 0;
@@ -19,6 +19,7 @@ ul{
     color: var(--blanco);
     font-size: 50px;
     padding: 20px;
+	font-size: 3.12em;
 }
 .descripcion{
     display: flex;
@@ -28,7 +29,7 @@ ul{
 }
 /* backgraund------ fondo--------- */
 .fondo{
-    height: 36em;
+    height: 34em;
     width: 100%;
     overflow: hidden;
 }
@@ -39,7 +40,6 @@ ul{
     height: 100vh;
     overflow: hidden;
     position: absolute;
-    background-color: black;
     background: linear-gradient(0deg, rgb(0, 0, 0) 0%,rgba(0, 0, 0, .9) 1%, rgba(0, 0, 0, 0) 59%, rgba(0, 0, 0, 1) 100%);
 }
 /* -----Menu----- */
@@ -58,6 +58,7 @@ ul{
     align-items: center;
     gap: 5px;
     font-size: 15px;
+
 }
 @media (min-width:400px) {
     .navegacion{
@@ -68,6 +69,7 @@ ul{
 .logo{
     width: 90px;
     height: 40px;
+    cursor: pointer;
 }
 @media (min-width:768px) {
     .logo{
@@ -80,6 +82,17 @@ ul{
         display: none;
     }
 }
+nav a {
+	color: #AAA;
+	text-decoration: none;
+	margin-right: 20px;
+}
+
+ nav a:hover,
+ nav a.activo {
+	color: #FFF;
+}
+
 .navegacion--izquierda li:nth-child(3),
 .navegacion--izquierda li:nth-child(4),
 .navegacion--izquierda li:nth-child(5),
@@ -146,17 +159,21 @@ ul{
 .imagotipo--info{
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 30px;
 }
 .imagotipo--info button{
-    border-radius: 10px;
-    font-size: 20px;
-    font-weight: 700;
-    padding: 10px;
+    background: rgba(0,0,0, 0.5);
+	border: none;
+	border-radius: 0.5em;
+	padding: 0.93em 1.87em;
+	color: #fff;
+	margin-right: 1.25em;
+	cursor: pointer;
+	transition: .3s ease all;
+	font-size: 1.12em;
 }
 .imagotipo--info button:nth-child(1){
     border: 1px solid white;
-    background-color: white;
     cursor: pointer;
 }
 .imagotipo--info button:nth-child(2){
@@ -167,6 +184,6 @@ ul{
 }
 .imagotipo--info button:nth-child(1):hover,
 .imagotipo--info button:nth-child(2):hover{
-    background-color: transparent;
-    color: white;
+    background: #fff;
+	color: #000;
 }
