--- a/NETFLIX/css/estilos.css
+++ b/NETFLIX/css/estilos.css
@@ -1,7 +1,12 @@
 :root {
-	--rojo: #E50914;
-	--fondo: #141414;
-}
+	--rojo: #e50914;
+	--blanco: white;
+	--gris: #303030;
+	--gris-f: #757575;
+	--negro: black;
+	/* Tipografía */
+	--tipo-principal:"Netflix Sans Regular";
+  }
 
 * {
 	margin: 0;
@@ -10,36 +15,33 @@
 }
 
 body {
-	background: var(--fondo);
+	background: var(--negro);
 	font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
     font-size: 16px;
 }
+/* video{
+    width: 100%;
+    height: 60vh;
+    object-fit: cover;
+    position: absolute;
+}
+img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    display: block;
+} */
 
-.contenedor {
-	width: 90%;
+/* .contenedor {
+	width: 100%;
 	margin: auto;
 
-}
-
-header {
-	padding: 15px 0;
-}
-
-header .contenedor {
-	display: flex;
-	align-items: center;
 }
 
 header svg {
 	width: 80px;
 	height: 30px;
 }
-.perfil {
-    display: flex;
-	justify-content: end;
-
-}
-
 
 header nav a {
 	color: #AAA;
@@ -51,43 +53,27 @@ header nav a {
 header nav a:hover,
 header nav a.activo {
 	color: #FFF;
-}
+} */
 
 /* ---- ----- ----- Pelicula Principal ----- ----- ----- */
-.pelicula-principal {
+/* .pelicula-principal {
 	font-size: 15px;
-	min-height:45.62em;
 	color: #fff;
-	/* background: linear-gradient(rgba(0, 0, 0, .50) 0%, rgba(0,0,0,.50) 100%), url(../img/spidi.jpg); */
-	background-position: center center;
+    background: linear-gradient(0deg, rgb(0, 0, 0) 0%,rgba(0, 0, 0, .9) 1%, rgba(0, 0, 0, 0) 59%, rgba(0, 0, 0, 1) 100%);
 	background-size: cover;
-	margin-bottom: 3.12em;
 	display: flex;
 	align-items: end;
 	position: relative;
+    padding: 30px;
 
-}
-.pelicula-principal .video-principal .video-portada{
-	width: 100vw;
-	height: 50vw;
-	object-fit: cover;
-	position: fixed;
-	left: 0;
-	right:0;
-	top: 0;
-	bottom: 0;
-    z-index: -1;
-}
-.pelicula-principal .contenedor {
+	
+} */
+
+/* .pelicula-principal .contenedor {
 	margin: 0 auto;
-	margin-bottom: 5.25em;
+	margin-bottom: 3.25em;
 }
 
-.pelicula-principal .titulo {
-	font-weight: 600;
-	font-size: 3.12em;
-	margin-bottom: 0.4em;
-}
 
 .pelicula-principal .descripcion {
 	font-weight: normal;
@@ -116,109 +102,6 @@ header nav a.activo {
 
 .pelicula-principal .boton i {
 	margin-right: 1.25em;
-}
-
-/* ---- ----- ----- Contenedor Titulo y Controles ----- ----- ----- */
-.contenedor-titulo-controles {
-	display: flex;
-	justify-content: space-between;
-	align-items: end;
-}
-
-.contenedor-titulo-controles h3 {
-	color: #fff;
-	font-size: 30px;
-}
-
-.contenedor-titulo-controles .indicadores button {
-	background: #fff;
-	height: 3px;
-	width: 10px;
-	cursor: pointer;
-	border: none;
-	margin-right: 2px;
-}
-
-.contenedor-titulo-controles .indicadores button:hover,
-.contenedor-titulo-controles .indicadores button.activo {
-	background: red;
-}
+} */
 
 
-/* ---- ----- ----- Contenedor Principal y Flechas ----- ----- ----- */
-.peliculas-recomendadas {
-	margin-bottom: 70px;
-}
-
-.peliculas-recomendadas .contenedor-principal {
-	display: flex;
-	align-items: center;
-	position: relative;
-}
-
-.peliculas-recomendadas .contenedor-principal .flecha-izquierda,
-.peliculas-recomendadas .contenedor-principal .flecha-derecha {
-	position: absolute;
-	border: none;
-	background: rgba(0,0,0,0.3);
-	font-size: 40px;
-	height: 50%;
-	top: calc(50% - 25%);
-	line-height: 40px;
-	width: 50px;
-	color: #fff;
-	cursor: pointer;
-	z-index: 500;
-	transition: .2s ease all;
-}
-
-.peliculas-recomendadas .contenedor-principal .flecha-izquierda:hover,
-.peliculas-recomendadas .contenedor-principal .flecha-derecha:hover {
-	background: rgba(0,0,0, .9);
-}
-
-.peliculas-recomendadas .contenedor-principal .flecha-izquierda {
-	left: 0;
-}
-
-.peliculas-recomendadas .contenedor-principal .flecha-derecha {
-	right: 0;
-}
-
-/* ---- ----- ----- contenedor carrousel Carousel ----- ----- ----- */
-.peliculas-recomendadas .contenedor-carousel {
-	width: 100%;
-	padding: 20px 0;
-	overflow: hidden;
-	scroll-behavior: smooth;
-}
-
-.peliculas-recomendadas .contenedor-carousel .carousel {
-	display: flex;
-	flex-wrap: nowrap;
-}
-
-.peliculas-recomendadas .contenedor-carousel .carousel .pelicula {
-	min-width: 20%;
-	transition: .3s ease all;
-	box-shadow: 5px 5px 10px rgba(0,0,0, .3);
-}
-
-.peliculas-recomendadas .contenedor-carousel .carousel .pelicula.hover {
-	transform: scale(1.2);
-	transform-origin: center;
-}
-
-.peliculas-recomendadas .contenedor-carousel .carousel .pelicula img {
-	width: 100%;
-	vertical-align: top;
-}
-
-.contenedor-carousel .icon {
-	display: flex;
-}
-
-.contenedor-carousel .icon i{
-	color: red;
-	padding: 0.5em;
-}
