--- a/NETFLIX/css/footer.css
+++ b/NETFLIX/css/footer.css
@@ -1,23 +1,39 @@
 /* ---- ----- ----- Pie de pagina ----- ----- ----- */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
 
 .footer {
-  margin: 3em 0 0;
+  margin: 2em 0 0;
   padding: 8vh 0;
   display: block;
-  flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
-  border-top: 40.4em solid ;
-}
-.footer .social .icon .social-link {
-color: var(--blanco); 
- padding: 45px;
-}
-.info .texto ul{
-  display: inline-block;
-  flex-wrap: wrap;
-  margin: 0 0 14px; 
-  background-color: aqua;
+  border-top: 35.4em solid ;
 
+  
 }
+.footer-contenedor{
+  flex-wrap: wrap;
+  width: 95%;
+  margin-inline:auto;
+}
+.social{
+  display: flex;
+  gap: 20px;
+}
+.social li{
+  width: 30px;
+  height: 30px;
+}
+.info {
+  display: grid;
+    color: rgb(133, 133, 133);
+    gap: 20px;
+    margin-block:20px;
+    font-size: 15px;
+}
+.info p:hover{
+  color: var(--blanco);
+}
+
+
 
