--- a/NETFLIX-v2/css/aside.css
+++ b/NETFLIX-v2/css/aside.css
@@ -1,9 +1,4 @@
-video{
-    width: 100%;
-    height: 70vh;
-    object-fit: cover;
-    position: absolute;
-}
+
 img{
     object-fit: cover;
     width: 100%;
@@ -21,17 +16,47 @@ ul{
     padding: 20px;
 	font-size: 3.12em;
 }
-.descripcion{
-    display: flex;
-    color: var(--blanco);
-    font-size: 1.3em;
-    padding: 20px;
-}
+
 /* backgraund------ fondo--------- */
 .fondo{
     height: 34em;
     width: 100%;
     overflow: hidden;
+}
+.video-princi{
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+.video-full{
+    background-position: 50%;
+    background-size: cover;
+    bottom: 0;
+    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+    filter: alpha(opacity=100);
+    left: 0;
+    opacity: 1;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: opacity .4s cubic-bezier(.665,.235,.265,.8) 0s;
+    width: 100%;
+}
+.video-full video{
+    background-position: 50%;
+    background-size: cover;
+    bottom: 0;
+    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+    filter: alpha(opacity=100);
+    left: 0;
+    opacity: 1;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: opacity .4s cubic-bezier(.665,.235,.265,.8) 0s;
+    width: 100%;
 }
 .contenedor{
     display: flex;
@@ -56,7 +81,7 @@ ul{
     padding-top: 10px;
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: 10px;
     font-size: 15px;
 
 }
@@ -110,46 +135,123 @@ nav a {
     display: none;
 }
 
-/* imagotipo */
+/*------ informacion de pelicula portada -------*/
 .imagotipo{
-    flex: 1;
-    width: 95%;
-    margin-inline: auto;
+    bottom: 23%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    gap: 15px;
+    justify-content: flex-end;
+    left: 4%;
+    position: absolute;
+    top: 0;
+    width: 26%;
+    z-index: 10;
+}
+ .imagotipo--imagen{
+    width: 400px;
+    height: 53%;
+}
+.logo-img{
+    margin-bottom: 1.2vw;
+    min-height: 13.2vw;
+    position: relative;
+}
+.logo-img img{
+    width: 100%;
+}
+.descripcion-peli{
+    color: #fff;
+    font-size: 1.2vw;
+    font-weight: 40;
+    line-height: normal;
+    margin-top: 1.1vw;
+    text-shadow: 2px 2px 4px rgba(0,0,0,.45);
+    width: 100%;
 }
 
-.imagotipo--info{
+ .imagotipo--info{
     display: flex;
+    line-height: 88%;
+    margin-top: 1.5vw;
+    white-space: nowrap;
+    
+} 
+
+#play{
+    padding-left: 2rem;
+    padding-right: 2.4rem;
+    background-color: white;
+    color: black;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
-    gap: 30px;
-}
-.imagotipo--info button{
-    background: rgba(0,0,0, 0.5);
-	border: none;
-	border-radius: 0.5em;
-	padding: 0.93em 1.87em;
-	color: #fff;
-	margin-right: 1.25em;
-	cursor: pointer;
-	transition: .3s ease all;
-	font-size: 1.12em;
-}
-.imagotipo--info button:nth-child(1){
-    border: 1px solid white;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    appearance: none;
+    border: 0;
+    border-radius: 4px;
     cursor: pointer;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    opacity: 1;
+    padding: 0.8rem;
+    position: relative;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    will-change: background-color,color;
+    word-break: break-word;
+    white-space: nowrap;
+    font-size: 1.2vw;
+    font-weight: bold;
 }
-.imagotipo--info button:nth-child(2){
-    border: 1px solid #6d6d63b3;
-    background-color: #6d6d63b3;
-    cursor: pointer;
+#mas-info{
+    font-weight: bold;
+    font-size: 1.2vw;
+    padding-left: 2rem;
+    padding-right: 2.4rem;
+    background-color: rgba(109, 109, 110, 0.7);
     color: white;
-}
-.imagotipo--info button:nth-child(1):hover,
-.imagotipo--info button:nth-child(2):hover{
-    background: #fff;
-	color: #000;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+    webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    appearance: none;
+    border: 0;
+    border-radius: 4px;
+    cursor: pointer;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    opacity: 1;
+    padding: 0.8rem;
+    position: relative;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    will-change: background-color,color;
+    word-break: break-word;
+    white-space: nowrap;
 }
