--- a/NETFLIX-v2/css/footer.css
+++ b/NETFLIX-v2/css/footer.css
@@ -4,17 +4,27 @@
 .footer {
   margin: 2em 0 0;
   padding: 8vh 0;
+  padding: 50px;
   display: block;
-  justify-content: center;
-  align-items: center;
   border-top: 35.4em solid ;
-
+  width: 90%;
+  justify-content: center;
   
+}
+.contenido-footer{
+  width: 90%;
+  padding: 0 80px;
 }
 .footer-contenedor{
   flex-wrap: wrap;
-  width: 95%;
+  justify-content: space-between;
+  width: 100%;
+  letter-spacing: 20px;
+  margin-top: 50px;
   margin-inline:auto;
+}
+.footer-contenedor a{
+  color: white;
 }
 .social{
   display: flex;
@@ -34,11 +44,15 @@
 .info p:hover{
   color: var(--blanco);
 }
-.servivio{
-  color: white;
+div .servicio{
+  width: 15%;
+  color: grey;
+  background-color: transparent;
   padding: 10px;
   font-weight: 90;
+  border: 1px solid grey;
 }
-
-
+div .servicio:hover{
+  color: white;
+}
 
